--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:dev": "cross-env NODE_ENV=development next dev",
+    "start:test": "cross-env NODE_ENV=test next dev",
+    "build:dev": "cross-env NODE_ENV=development next build",
+    "build:test": "cross-env NODE_ENV=test next build",
+    "build:pro": "cross-env NODE_ENV=production next build"
   },
   "dependencies": {
     "react": "^18",
@@ -21,6 +26,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
+    "cross-env": "^7.0.3",
     "eslint-config-next": "14.2.2"
   }
 }
