--- a/package.json
+++ b/package.json
@@ -14,19 +14,32 @@
     "build:pro": "cross-env NODE_ENV=production next build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "bech32": "^2.0.0",
+    "buffer": "^6.0.3",
+    "dayjs": "^1.11.10",
+    "decimal.js": "^10.4.3",
+    "ethereum-blockies": "^0.1.1",
+    "ethers": "^6.12.0",
+    "next": "14.2.2",
+    "nft.storage": "^7.1.1",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "cross-env": "^7.0.3",
-    "eslint-config-next": "14.2.2"
+    "typescript": "^5"
   }
 }
